--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/busboy": "^1.5.4",
     "bcrypt": "^5.1.1",
-    "pg": "^8.11.3",
+    "busboy": "^1.6.0",
     "next": "14.2.35",
+    "pg": "^8.11.3",
     "react": "^18",
     "react-dom": "^18",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/pg": "^8.10.9",
     "@types/node": "^20",
+    "@types/pg": "^8.10.9",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^10.0.0",
